# Minesweeper

./: CMakeLists.txt  README.md
include/: platform.h
lib/game/: game.cpp  game.h
lib/renderer/: renderer.cpp  renderer.h
lib/score_manager/: score_manager.cpp  score_manager.h
lib/window/: window.cpp  window.h
src/: main.cpp
